fix: inputs stretch form

--- a/src/common/ui/inputText/InputText.module.css
+++ b/src/common/ui/inputText/InputText.module.css
@@ -28,5 +28,30 @@
 }
 
 .error {
+  position: absolute;
+  left: 0;
+  top: calc(100% + 4px);
+  padding: 1px 9px 3px 9px;
+  background: #303030;
   color: red;
+  font-size: 13px;
+  line-height: 1.3;
+  border-radius: 6px;
+  margin-top: 4px;
+  pointer-events: none;
+  opacity: 1;
+  animation-iteration-count: 1;
+  z-index: 1;
+}
+
+.error:before {
+  content: '';
+  position: absolute;
+  top: -4px;
+  left: 14px;
+  width: 8px;
+  height: 8px;
+  transform: rotate(45deg);
+  background: #303030;
+  z-index: -1;
 }
